--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@
 }
 body {
     height: 100vh;
-    background-image: url("images/horror_game.jpg");
+    background-image: url("images/background-image.png");
+    background-position: bottom center;
     background-repeat: no-repeat;
     background-size: cover;
 }
